k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: ingress-app
spec:
  tls:  
  - hosts:
    - admin.ambassamart.store
    - ambassador.ambassamart.store
    secretName: tls-secret
  rules:
  - host: admin.ambassamart.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminfront
            port:
              number: 80
  - host: ambassador.ambassamart.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ambassadorfront
            port:
              number: 80
